--- a/bootCrm12.3/WebContent/css/paperManualAdd.css
+++ b/bootCrm12.3/WebContent/css/paperManualAdd.css
@@ -96,10 +96,97 @@ input[type=checkbox]:checked + label{
     width:100%;
     height: 100%;
 }
+
+#knowpointTree{
+	height:400px;
+	overflow-y :scroll;
+}
+.treeview .list-group-item.node-checked {
+    color: red;
+}
+.treeview .list-group-item.node-selected {
+    color: red;
+}
+
 .paperContent{
     
+}
+
+.group_main{
+	margin-left:20px;
+}
+.question-content {
+    background: #F6F7FA;
+    border-radius: 4px;
+    margin-bottom: 21px;
+    padding: 12px 0 12px 22px;
+    position: relative;
+    min-height: 100px;
+    font-size: 12px;
+    color: #666666;
+    text-align: left;
+}
+.radioOfQuestion .content, .fillOfQuestion .content, .judgeOfQuestion .content, .clozeOfQuestion .content, 
+.analysisOfQuestion .content{
+    text-align: left;
+    font-size: 12px;
+    color: #666666;
+    margin-bottom: 8px;
+    max-width: 50%;
+    word-wrap: break-word;
+    word-break: normal;
+    text-align:left;
+}
+
+.descOfQuestion .content{
+	font-size: 14px;
+    color: #333333;
+    margin-bottom: 8px;
+    max-width: 50%;
+    word-wrap: break-word;
+    word-break: normal;
+    text-align:left;
+	font-weight: bold;
+}
+.descOfQuestion, .radioOfQuestion, .fillOfQuestion, .judgeOfQuestion, .clozeOfQuestion, .analysisOfQuestion{
+	margin-bottom:10px;
+}
+
+.keyJudge input[type=radio]:checked + label {
+    background: #A9B3BF;
+    border: 1px solid #878F98;
+    color: #fff;
+}
+i{
+	font-size: 15px;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    top: 2px;
+}
+.group_main .group_simple {
+    margin-bottom: 41px;
 }
 .title{
     text-align: center
 }
-/*创建试卷第二步 章节选题end*/
+
+.paperContent h3 {
+    border-bottom: 1px solid #DEDEDE;
+    padding-bottom: 10px;
+    margin: 0;
+    color: #333333;
+}
+.paperContent h3 input {
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+    color: #333;
+    border: none;
+}
+/*
+创建试卷第二步 章节选题end*/
