添加预览界面及功能

--- a/bootCrm12.11/WebContent/css/paperManualAdd.css
+++ b/bootCrm12.11/WebContent/css/paperManualAdd.css
@@ -211,6 +211,10 @@ a {
     border: none;
 }
 
+.paperInfo .preview, .paperInfo .btnNextStep{
+	text-align:center;
+	margin-bottom:9px;
+}
 .paperInfo .total{
 	width: 100%;
     border: 1px solid #DEDEDE;
