修复章节长度自适应 生成试卷样式

--- a/bootCrm12.21/WebContent/css/addQuestion.css
+++ b/bootCrm12.21/WebContent/css/addQuestion.css
@@ -46,7 +46,7 @@ textarea{
 }
 .batch-type {
     background: #fff;
-    padding: 16px 0 13px 0;
+/*     padding: 16px 0 13px 0; */
     font-size: 12px;
     position: relative;
 }
